--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #2a1736;
+$base-color: #4f408b;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
